--- a/asterisk-demo/.env
+++ b/asterisk-demo/.env
@@ -1,6 +1,7 @@
 COMPOSE_PROJECT_NAME=asterisk-demo
 SYSLOG_LEVEL=8
-DOMAIN=example.net
+DOMAIN=example.com
+DOMAIN_IP=100.95.141.155
 TELE_SRV=tele
 SMS_PORT=58585
 WEBSMSD_PORT=580
