--- a/asterisk-demo/conf_template/pjsip_transport_template.conf
+++ b/asterisk-demo/conf_template/pjsip_transport_template.conf
@@ -9,9 +9,9 @@
 [t_wan](!)
 type = transport
 bind = 0.0.0.0:5060
-domain = example.com
-external_signaling_address = sip.example.com
-external_media_address = sip.example.com
+domain = {DDDDDD}
+external_signaling_address = sip.{DDDDDD}
+external_media_address = sip.{DDDDDD}
 tos = cs3
 cos = 3
 
